--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,8 @@
 @import url(../vendor/normalize.css);
 
 @import url(../vendor/fonts.css);
+
+@import url(../blocks/page/page.css);
+@import url(../blocks/page/__header/page__header.css);
+
+@import url(../blocks/header/header.css);
