--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,8 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__header/page__header.css);
 @import url(../blocks/page/__profile/page__profile.css);
+@import url(../blocks/page/__places/page__places.css);
+
 
 
 @import url(../blocks/header/header.css);
@@ -16,6 +18,20 @@
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 @import url(../blocks/profile/__status/profile__status.css);
 @import url(../blocks/profile/__add-btn/profile__add-btn.css);
+
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__list/places__list.css);
+@import url(../blocks/places/__card/places__card.css);
+@import url(../blocks/places/__photo/places__photo.css);
+@import url(../blocks/places/__caption/places__caption.css);
+@import url(../blocks/places/__name/places__name.css);
+@import url(../blocks/places/__like-btn/places__like-btn.css);
+@import url(../blocks/places/__like-btn/__active/places__like-btn__active.css);
+
+
+
+
+
 
 
 
