--- a/blocks/page/__footer/page__footer.css
+++ b/blocks/page/__footer/page__footer.css
@@ -1,3 +1,9 @@
 .page__footer {
-  margin: 67px 200px 0;
+  margin: 57px 19px 0;
+}
+
+@media (max-width: 767px) {
+  .page__footer {
+    margin-top: 48px;
+  }
 }
