--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  max-width: 1280px;
+  max-width: 918px;
   min-width: 320px;
   margin: 0 auto;
   padding: 45px 0 60px;
@@ -8,4 +8,10 @@
   color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (max-width: 767px) {
+  .page {
+    padding: 28px 0 36px;
+  }
 }
