--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,4 +1,5 @@
 .profile__add-btn {
+  margin-left: 40px;
   border: 2px solid white;
   border-radius: 2px;
   width: 150px;
@@ -12,4 +13,13 @@
 .profile__add-btn:hover {
   opacity: .6;
   cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .profile__add-btn {
+    margin-left: 0;
+    width: auto;
+    align-self: stretch;
+    background-size: 16px;
+  }
 }
