--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,5 +2,10 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin-right: 30px;
+}
+
+@media (max-width: 767px) {
+  .profile__avatar {
+    margin-bottom: 26px;
+  }
 }
