--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,14 @@
 .profile__name {
-  display: inline-block;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  margin: 0 15px 7px 0;
+  margin: 0;
+}
+
+@media (max-width: 767px) {
+  .profile__name {
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+  }
 }
