--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -4,3 +4,11 @@
   line-height: 22px;
   margin: 0;
 }
+
+@media (max-width: 767px) {
+  .profile__status {
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+  }
+}
