--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,4 +2,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 30px;
+}
+
+@media (max-width: 767px) {
+  .profile {
+    gap: 0;
+    flex-direction: column;
+  }
 }
