--- a/pages/index.css
+++ b/pages/index.css
@@ -8,14 +8,13 @@
 @import url(../blocks/page/__places/page__places.css);
 @import url(../blocks/page/__footer/page__footer.css);
 
-
-
-
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name-row/profile__name-row.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 @import url(../blocks/profile/__status/profile__status.css);
