--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -6,8 +7,6 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, .5);
 }
-
-
 
 
 
