--- a/blocks/page/__places/page__places.css
+++ b/blocks/page/__places/page__places.css
@@ -1,3 +1,9 @@
 .page__places {
-  margin: 35px 19px 0;
+  margin: 51px 19px 0;
+}
+
+@media (max-width: 767px) {
+  .page__places {
+    margin: 35px 19px 0;
+  }
 }
