--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,13 @@
 @import url(../blocks/places/__like-btn/_active/places__like-btn_active.css);
 @import url(../blocks/places/__delete-btn/places__delete-btn.css);
 
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/_hidden/image-popup_hidden.css);
+@import url(../blocks/image-popup/__figure/image-popup__figure.css);
+@import url(../blocks/image-popup/__photo/image-popup__photo.css);
+@import url(../blocks/image-popup/__caption/image-popup__caption.css);
+@import url(../blocks/image-popup/__close-btn/image-popup__close-btn.css);
+
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__form/popup__form.css);
