--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -6,5 +6,8 @@
   min-width: 320px;
   width: 100vw;
   height: 100vh;
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0s, opacity .3s linear;
   background-color: rgba(0, 0, 0, .9);
 }
