--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,12 @@
 .popup {
-  display: none;
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  opacity: 0;
+  transition: visibility .3s, opacity .3s linear;
   background-color: rgba(0, 0, 0, .5);
 }
 
