--- a/blocks/popup/__figure/popup__figure.css
+++ b/blocks/popup/__figure/popup__figure.css
@@ -1,8 +1,7 @@
-.image-popup__figure {
+.popup__figure {
   margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
