--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,22 +1,21 @@
-.popup__status {
+.popup__input {
   width: 100%;
   padding: 0 0 9px 0;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-bottom: 50px;
   font-size: 14px;
   line-height: 17px;
 }
 
-.popup__status:focus {
+.popup__input:focus {
   outline-offset: 5px;
   border: none;
 }
 
 @media (max-width: 767px) {
-  .popup__status {
+  .popup__input {
     font-size: 14px;
     line-height: 17px;
-    margin-bottom: 45px;
+    margin-bottom: 30px;
   }
 }
