--- a/pages/index.css
+++ b/pages/index.css
@@ -41,7 +41,15 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_place-name.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_src.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_status.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
+@import url(../blocks/popup/__input-error/_type/popup__input-error_type_full-name.css);
+@import url(../blocks/popup/__input-error/_type/popup__input-error_type_status.css);
+@import url(../blocks/popup/__input-error/_type/popup__input-error_type_place-name.css);
+@import url(../blocks/popup/__input-error/_type/popup__input-error_type_src.css);
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
+@import url(../blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 
 @import url(../blocks/footer/__copyright/footer__copyright.css);
