--- a/blocks/card/__like-btn/_active/card__like-btn_active.css
+++ b/blocks/card/__like-btn/_active/card__like-btn_active.css
@@ -1,7 +1,7 @@
-.places__like-btn_active {
+.card__like-btn_active {
   background-image: url(../../../../images/like_active.png);
 }
 
-.places__like-btn_active:hover {
+.card__like-btn_active:hover {
   opacity: 1;
 }
