--- a/blocks/card/__like-btn/card__like-btn.css
+++ b/blocks/card/__like-btn/card__like-btn.css
@@ -1,4 +1,4 @@
-.places__like-btn {
+.card__like-btn {
   border: none;
   width: 22px;
   height: 19px;
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
 }
 
-.places__like-btn:hover {
+.card__like-btn:hover {
   opacity: .6;
   cursor: pointer;
 }
