--- a/blocks/card/__photo/card__photo.css
+++ b/blocks/card/__photo/card__photo.css
@@ -1,9 +1,9 @@
-.places__photo {
+.card__photo {
   display: block;
   width: 100%;
   height: 282px;
 }
 
-.places__photo:hover {
+.card__photo:hover {
   cursor: pointer;
 }
