--- a/blocks/places/__list/places__list.css
+++ b/blocks/places/__list/places__list.css
@@ -3,7 +3,8 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  justify-content: space-evenly;
+  grid-template-columns: repeat(auto-fill, 282px);
   gap: 21px 17px;
   flex-grow: 0;
 }
