--- a/src/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/src/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -8,6 +8,7 @@
   vertical-align: baseline;
   background-color: inherit;
   background-image: url(../../../images/edit.png);
+  background-size: 10px 10px;
   background-position: center;
   background-repeat: no-repeat;
 }
